[gd_scene load_steps=3 format=3 uid="uid://memoryflipgame"]

[ext_resource type="Script" path="res://scripts/MemoryFlipGame.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://gamescenebase" path="res://scenes/GameSceneBase.tscn" id="2"]

[node name="MemoryFlipGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="GameSceneBase" parent="." instance=ExtResource("2")]

[node name="CardContainer" type="GridContainer" parent="GameSceneBase"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -70.0
offset_right = 130.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="WinLabel" type="Label" parent="GameSceneBase"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
theme_type_variation = &"HeaderMedium"
text = "Wah hebat!"
horizontal_alignment = 1
vertical_alignment = 1
modulate = Color(1, 1, 1, 0)

[node name="CheckTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ResetTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="WinTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
